maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:2: error: Missing closing brace `}' assumed here
var sommeAngle:Int = 0
^PledgeMaze:2: error: expected class or object definition
var sommeAngle:Int = 0
^PledgeMaze:4: error: expected start of definition
override def run() {
         ^